--- a/pandas_to_distributed/spark-pipe.ipynb
+++ b/pandas_to_distributed/spark-pipe.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/02/22 16:27:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/02/23 11:16:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "2ba4cc85",
    "metadata": {},
    "outputs": [
@@ -101,30 +101,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+-------+---------+---------+----+------+------+------+--------+----+-----+----+\n",
-      "|SymxUUBCx|RcKB398|uNQMYeBmQ|lOihuqh9a|pIkq|21rkd6|yLdLOm|CLrQTb|LFThQKIw|sYef|00L3k| OjQ|\n",
-      "+---------+-------+---------+---------+----+------+------+------+--------+----+-----+----+\n",
-      "|       51|      2|       37|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       83|     88|       38|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       40|     30|       25|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       27|     52|       66|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       65|     43|       57|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       59|     14|       93|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       28|     84|       20|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       51|      1|       52|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       46|     36|       20|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       28|     20|       63|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       82|     93|       61|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       99|     57|       34|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       30|     29|       34|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       59|      2|       16|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       17|     25|       18|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|        9|     88|        2|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|       54|     63|       90|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|        1|      2|       73|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|        3|     71|       63|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "|        9|     32|       57|     null|null|  null|  null|  null|    null|null| null|null|\n",
-      "+---------+-------+---------+---------+----+------+------+------+--------+----+-----+----+\n",
+      "+---------+-------+---------+---------+----+------+------+------+--------+-----+-----+----------+\n",
+      "|SymxUUBCx|RcKB398|uNQMYeBmQ|lOihuqh9a|pIkq|21rkd6|yLdLOm|CLrQTb|LFThQKIw| sYef|00L3k|       OjQ|\n",
+      "+---------+-------+---------+---------+----+------+------+------+--------+-----+-----+----------+\n",
+      "|     null|     74|       94|        7|  89|    96|     1|    93|       1|abc23| 50.0|2020-02-01|\n",
+      "|     null|     90|       68|       94|  72|    32|    81|    58|       0|abc23| 50.0|2020-02-01|\n",
+      "|     null|     79|       10|       99|  39|    76|    28|    44|       1|  nan| 50.0|2020-02-01|\n",
+      "|     null|      5|       83|       78|  26|    96|    79|    66|       0|   81| 50.0|2020-02-01|\n",
+      "|     null|     66|       89|       70|  17|    43|    95|    89|       1|   75| 50.0|2020-02-01|\n",
+      "|     null|     44|       89|       85|  87|    90|    45|    72|       0|abc23| 50.0|2020-02-01|\n",
+      "|     null|     36|       94|       28|   6|    75|    54|    18|       0| null| 10.0|2020-02-01|\n",
+      "|     null|     49|       94|       98|  24|    15|    10|    40|       0|abc23| 50.0|2020-02-01|\n",
+      "|     null|      8|       16|       51|  57|    11|    47|    54|       0|   99| 50.0|2020-02-01|\n",
+      "|     null|     33|       67|       98|   1|    40|    16|    87|       0|   34| 50.0|2020-02-01|\n",
+      "|     null|     89|       84|       71|  12|    36|    23|    41|       1|  nan| 10.0|2020-02-01|\n",
+      "|     null|     52|       89|       13|  87|    35|    56|    11|       1|  nan| 10.0|2020-02-01|\n",
+      "|     null|     76|        6|       60|  67|    89|    53|     1|       1|   37| 50.0|2020-02-01|\n",
+      "|     null|     87|       62|       53|  91|    27|    30|    69|       0|   79| 10.0|2020-02-01|\n",
+      "|     null|     43|       15|       12|  56|    91|    87|    51|       1|   40| 50.0|2020-02-01|\n",
+      "|     null|     60|        5|       70|  55|    12|    61|    69|       1|   97| 10.0|2020-02-01|\n",
+      "|     null|     16|       34|       11|  38|    24|    13|    11|       1|abc23| 50.0|2020-02-01|\n",
+      "|     null|     94|       20|       98|  63|    17|    73|     4|       0|abc23| 50.0|2020-02-01|\n",
+      "|     null|     21|       18|       49|  90|     8|    36|    38|       0|abc23| 50.0|2020-02-01|\n",
+      "|     null|     45|        4|       79|  29|    53|    36|    11|       0|    0| 10.0|2020-02-01|\n",
+      "+---------+-------+---------+---------+----+------+------+------+--------+-----+-----+----------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "d67613a7",
    "metadata": {},
    "outputs": [
@@ -148,16 +148,12 @@
       "|SymxUUBCx|RcKB398|uNQMYeBmQ|lOihuqh9a|pIkq|21rkd6|yLdLOm|CLrQTb|LFThQKIw| sYef|00L3k|       OjQ|\n",
       "+---------+-------+---------+---------+----+------+------+------+--------+-----+-----+----------+\n",
       "|     null|     30|       57|       49|  34|    83|    26|    43|       0|  nan| 50.0|2020/02/01|\n",
-      "|     null|     82|       68|       92|  68|    43|    76|    61|       1|abc23| 25.0|2020/02/01|\n",
       "|     null|      8|       92|       51|  37|    23|    46|    86|       1|abc23| 10.0|2020/02/01|\n",
-      "|     null|     13|        7|       89|  81|    52|    86|    87|       0|   34| 25.0|2020/02/01|\n",
       "|     null|     27|       65|       20|  37|    29|    73|    70|       0|abc23| 10.0|2020/02/01|\n",
       "|     null|     49|       56|       42|  88|    49|    79|    11|       1| null| 10.0|2020/02/01|\n",
       "|     null|     46|       46|       84|  75|    97|    92|    11|       1|   86| 50.0|2020/02/01|\n",
       "|     null|     11|       28|       53|  99|    77|    21|    60|       1|abc23| 50.0|2020/02/01|\n",
-      "|     null|      9|       27|       89|  99|    57|    36|    59|       1|abc23| 25.0|2020/02/01|\n",
       "|     null|     58|       53|       38|  21|    53|    71|    52|       1|abc23| 50.0|2020/02/01|\n",
-      "|     null|     85|       67|       48|  19|    35|     1|    72|       0|abc23| 25.0|2020/02/01|\n",
       "|     null|     67|       92|       95|  31|    89|    86|    11|       0|abc23| 50.0|2020/02/01|\n",
       "|     null|     46|        1|       93|  84|    59|    80|    31|       1|abc23| 10.0|2020/02/01|\n",
       "|     null|     67|       13|       40|  81|    21|    35|    24|       0|   13| 50.0|2020/02/01|\n",
@@ -167,6 +163,10 @@
       "|     null|     69|       67|       82|  30|    96|    54|    25|       1| null| 50.0|2020/02/01|\n",
       "|     null|     19|       80|       68|  95|    62|    19|    80|       1|abc23| 50.0|2020/02/01|\n",
       "|     null|     92|       38|       79|  24|    90|    40|    20|       1|abc23| 50.0|2020/02/01|\n",
+      "|     null|     78|       91|       84|  16|    40|    82|    88|       1|abc23| 10.0|2020/02/01|\n",
+      "|     null|     36|        7|       68|  13|     8|    69|    50|       0|abc23| 10.0|2020/02/01|\n",
+      "|     null|     99|       92|       87|  82|    10|    51|    56|       1|abc23| 50.0|2020/02/01|\n",
+      "|     null|     27|       97|       65|  13|    24|    62|    36|       1|  nan| 50.0|2020/02/01|\n",
       "+---------+-------+---------+---------+----+------+------+------+--------+-----+-----+----------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -234,12 +234,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5db176d3",
+   "execution_count": 16,
+   "id": "058e6f5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__and__',\n",
+       " '__bool__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__div__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattr__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__invert__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__module__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__neg__',\n",
+       " '__new__',\n",
+       " '__nonzero__',\n",
+       " '__or__',\n",
+       " '__pow__',\n",
+       " '__radd__',\n",
+       " '__rand__',\n",
+       " '__rdiv__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__ror__',\n",
+       " '__rpow__',\n",
+       " '__rsub__',\n",
+       " '__rtruediv__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " '__truediv__',\n",
+       " '__weakref__',\n",
+       " '_asc_doc',\n",
+       " '_asc_nulls_first_doc',\n",
+       " '_asc_nulls_last_doc',\n",
+       " '_bitwiseAND_doc',\n",
+       " '_bitwiseOR_doc',\n",
+       " '_bitwiseXOR_doc',\n",
+       " '_contains_doc',\n",
+       " '_desc_doc',\n",
+       " '_desc_nulls_first_doc',\n",
+       " '_desc_nulls_last_doc',\n",
+       " '_endswith_doc',\n",
+       " '_eqNullSafe_doc',\n",
+       " '_ilike_doc',\n",
+       " '_isNotNull_doc',\n",
+       " '_isNull_doc',\n",
+       " '_jc',\n",
+       " '_like_doc',\n",
+       " '_rlike_doc',\n",
+       " '_startswith_doc',\n",
+       " 'alias',\n",
+       " 'asc',\n",
+       " 'asc_nulls_first',\n",
+       " 'asc_nulls_last',\n",
+       " 'astype',\n",
+       " 'between',\n",
+       " 'bitwiseAND',\n",
+       " 'bitwiseOR',\n",
+       " 'bitwiseXOR',\n",
+       " 'cast',\n",
+       " 'contains',\n",
+       " 'desc',\n",
+       " 'desc_nulls_first',\n",
+       " 'desc_nulls_last',\n",
+       " 'dropFields',\n",
+       " 'endswith',\n",
+       " 'eqNullSafe',\n",
+       " 'getField',\n",
+       " 'getItem',\n",
+       " 'ilike',\n",
+       " 'isNotNull',\n",
+       " 'isNull',\n",
+       " 'isin',\n",
+       " 'like',\n",
+       " 'name',\n",
+       " 'otherwise',\n",
+       " 'over',\n",
+       " 'rlike',\n",
+       " 'startswith',\n",
+       " 'substr',\n",
+       " 'when',\n",
+       " 'withField']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(F.col(col4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a1d18a4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#F.regexp_replace(F.col(col5), data_regex, '').isNotNull()"
+    "array = [1,2,3,25]\n",
+    "df = df.filter(~F.col(col4).isin(array))"
    ]
   },
   {
